{
  "version": 4,
  "terraform_version": "0.14.10",
  "serial": 48,
  "lineage": "3ce27e9d-e35c-5df8-80f1-cb1f4ca9123f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "EipForNatGw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-037d5abe5ccd6340c",
            "association_id": "eipassoc-07580f37e9ce0c645",
            "domain": "vpc",
            "id": "eipalloc-037d5abe5ccd6340c",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0b425f3dc1307149c",
            "private_dns": "ip-10-0-1-83.us-west-2.compute.internal",
            "private_ip": "10.0.1.83",
            "public_dns": "ec2-54-190-119-247.us-west-2.compute.amazonaws.com",
            "public_ip": "54.190.119.247",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "EipForNatGw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0be82a38ccd61c41e",
            "association_id": "eipassoc-02f9e42cf08176024",
            "domain": "vpc",
            "id": "eipalloc-0be82a38ccd61c41e",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0ac43b91d9c39ae74",
            "private_dns": "ip-10-0-2-26.us-west-2.compute.internal",
            "private_ip": "10.0.2.26",
            "public_dns": "ec2-44-234-206-28.us-west-2.compute.amazonaws.com",
            "public_ip": "44.234.206.28",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "EipForNatGw3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04629ec11d7e8d195",
            "association_id": "eipassoc-0230a84f64d1f7834",
            "domain": "vpc",
            "id": "eipalloc-04629ec11d7e8d195",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0eb39647f7ef5c7f7",
            "private_dns": "ip-10-0-3-196.us-west-2.compute.internal",
            "private_ip": "10.0.3.196",
            "public_dns": "ec2-44-238-146-120.us-west-2.compute.amazonaws.com",
            "public_ip": "44.238.146.120",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2dfd42fa1fbb52c",
            "arn": "arn:aws:ec2:us-west-2:593052070155:instance/i-067b11799213cd7bd",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fbb3bfd4a08b3d27",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ssm-ec2-profile",
            "id": "i-067b11799213cd7bd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "patchdemo",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0f6ed7e6af2b29e33",
            "private_dns": "ip-10-0-1-211.us-west-2.compute.internal",
            "private_ip": "10.0.1.211",
            "public_dns": "ec2-35-86-100-133.us-west-2.compute.amazonaws.com",
            "public_ip": "35.86.100.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03662f316a92e357f",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ddda80d7f5d2b7bd",
            "tags": {
              "Name": "aws_patch_demo"
            },
            "tags_all": {
              "Name": "aws_patch_demo"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d8d817791e1d368d"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_ssm_profile",
            "aws_key_pair.patchdemo",
            "aws_security_group.allow-ssh",
            "aws_subnet.PublicSubnet1",
            "data.aws_ami.rhel7"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:593052070155:internet-gateway/igw-07629c730e233880b",
            "id": "igw-07629c730e233880b",
            "owner_id": "593052070155",
            "tags": {
              "Name": "IGW"
            },
            "tags_all": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-04eed315a8046044b"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NatGw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-037d5abe5ccd6340c",
            "connectivity_type": "public",
            "id": "nat-0f89b8619910a6a92",
            "network_interface_id": "eni-0b425f3dc1307149c",
            "private_ip": "10.0.1.83",
            "public_ip": "54.190.119.247",
            "subnet_id": "subnet-0ddda80d7f5d2b7bd",
            "tags": {
              "Name": "NAT GW 1A"
            },
            "tags_all": {
              "Name": "NAT GW 1A"
            }
          },
          "dependencies": [
            "aws_eip.EipForNatGw1",
            "aws_subnet.PublicSubnet1",
            "aws_vpc.VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NatGw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0be82a38ccd61c41e",
            "connectivity_type": "public",
            "id": "nat-05c357d6d1ee8e94f",
            "network_interface_id": "eni-0ac43b91d9c39ae74",
            "private_ip": "10.0.2.26",
            "public_ip": "44.234.206.28",
            "subnet_id": "subnet-0be67c0b3a3959010",
            "tags": {
              "Name": "NAT GW 1B"
            },
            "tags_all": {
              "Name": "NAT GW 1B"
            }
          },
          "dependencies": [
            "aws_eip.EipForNatGw2",
            "aws_subnet.PublicSubnet2",
            "aws_vpc.VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NatGw3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04629ec11d7e8d195",
            "connectivity_type": "public",
            "id": "nat-0cfe3c71ba1b5f4ae",
            "network_interface_id": "eni-0eb39647f7ef5c7f7",
            "private_ip": "10.0.3.196",
            "public_ip": "44.238.146.120",
            "subnet_id": "subnet-01f3fa4f9f6ea6c96",
            "tags": {
              "Name": "NAT GW 1C"
            },
            "tags_all": {
              "Name": "NAT GW 1C"
            }
          },
          "dependencies": [
            "aws_eip.EipForNatGw3",
            "aws_subnet.PublicSubnet3",
            "aws_vpc.VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RouteTablePrivate1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:593052070155:route-table/rtb-067de02bd27c45764",
            "id": "rtb-067de02bd27c45764",
            "owner_id": "593052070155",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f89b8619910a6a92",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table 1A"
            },
            "tags_all": {
              "Name": "Private Route Table 1A"
            },
            "timeouts": null,
            "vpc_id": "vpc-04eed315a8046044b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.EipForNatGw1",
            "aws_nat_gateway.NatGw1",
            "aws_subnet.PublicSubnet1",
            "aws_vpc.VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RouteTablePrivate2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:593052070155:route-table/rtb-0ec9114a9eb30b482",
            "id": "rtb-0ec9114a9eb30b482",
            "owner_id": "593052070155",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05c357d6d1ee8e94f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table 1B"
            },
            "tags_all": {
              "Name": "Private Route Table 1B"
            },
            "timeouts": null,
            "vpc_id": "vpc-04eed315a8046044b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.EipForNatGw2",
            "aws_nat_gateway.NatGw2",
            "aws_subnet.PublicSubnet2",
            "aws_vpc.VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RouteTablePrivate3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:593052070155:route-table/rtb-07cd6e6265a17bdc8",
            "id": "rtb-07cd6e6265a17bdc8",
            "owner_id": "593052070155",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cfe3c71ba1b5f4ae",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table 1C"
            },
            "tags_all": {
              "Name": "Private Route Table 1C"
            },
            "timeouts": null,
            "vpc_id": "vpc-04eed315a8046044b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.EipForNatGw3",
            "aws_nat_gateway.NatGw3",
            "aws_subnet.PublicSubnet3",
            "aws_vpc.VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RouteTablePublic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:593052070155:route-table/rtb-0057b600dfdae61fe",
            "id": "rtb-0057b600dfdae61fe",
            "owner_id": "593052070155",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07629c730e233880b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_Route_Table"
            },
            "tags_all": {
              "Name": "Public_Route_Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04eed315a8046044b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Igw",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AssociationForRouteTablePrivate10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0431b16df2dab34ce",
            "route_table_id": "rtb-067de02bd27c45764",
            "subnet_id": "subnet-017ec231a763b655c"
          },
          "dependencies": [
            "aws_eip.EipForNatGw1",
            "aws_nat_gateway.NatGw1",
            "aws_route_table.RouteTablePrivate1",
            "aws_subnet.PrivateSubnet1",
            "aws_subnet.PublicSubnet1",
            "aws_vpc.VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AssociationForRouteTablePrivate20",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06048b05cff36aa9e",
            "route_table_id": "rtb-0ec9114a9eb30b482",
            "subnet_id": "subnet-026c04ad65b2095dd"
          },
          "dependencies": [
            "aws_eip.EipForNatGw2",
            "aws_nat_gateway.NatGw2",
            "aws_route_table.RouteTablePrivate2",
            "aws_subnet.PrivateSubnet2",
            "aws_subnet.PublicSubnet2",
            "aws_vpc.VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AssociationForRouteTablePrivate30",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d626b1115d3b818",
            "route_table_id": "rtb-07cd6e6265a17bdc8",
            "subnet_id": "subnet-0e5cee14bb8b22165"
          },
          "dependencies": [
            "aws_eip.EipForNatGw3",
            "aws_nat_gateway.NatGw3",
            "aws_route_table.RouteTablePrivate3",
            "aws_subnet.PrivateSubnet3",
            "aws_subnet.PublicSubnet3",
            "aws_vpc.VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AssociationForRouteTablePublic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0392ec1028a172309",
            "route_table_id": "rtb-0057b600dfdae61fe",
            "subnet_id": "subnet-0ddda80d7f5d2b7bd"
          },
          "dependencies": [
            "aws_internet_gateway.Igw",
            "aws_route_table.RouteTablePublic",
            "aws_subnet.PublicSubnet1",
            "aws_vpc.VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AssociationForRouteTablePublic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007937d6afb360ef4",
            "route_table_id": "rtb-0057b600dfdae61fe",
            "subnet_id": "subnet-0be67c0b3a3959010"
          },
          "dependencies": [
            "aws_internet_gateway.Igw",
            "aws_route_table.RouteTablePublic",
            "aws_subnet.PublicSubnet2",
            "aws_vpc.VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AssociationForRouteTablePublic3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f522e3b5d00e1f5b",
            "route_table_id": "rtb-0057b600dfdae61fe",
            "subnet_id": "subnet-01f3fa4f9f6ea6c96"
          },
          "dependencies": [
            "aws_internet_gateway.Igw",
            "aws_route_table.RouteTablePublic",
            "aws_subnet.PublicSubnet3",
            "aws_vpc.VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:593052070155:security-group/sg-0d8d817791e1d368d",
            "description": "A security group that allows inbound SSH traffic (TCP port 22).",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d8d817791e1d368d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh-traffic",
            "name_prefix": "",
            "owner_id": "593052070155",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04eed315a8046044b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:593052070155:subnet/subnet-017ec231a763b655c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-017ec231a763b655c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "593052070155",
            "tags": {
              "Name": "Private Subnet 1A"
            },
            "tags_all": {
              "Name": "Private Subnet 1A"
            },
            "vpc_id": "vpc-04eed315a8046044b"
          },
          "dependencies": [
            "aws_vpc.VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:593052070155:subnet/subnet-026c04ad65b2095dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.12.0/24",
            "id": "subnet-026c04ad65b2095dd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "593052070155",
            "tags": {
              "Name": "Private Subnet 1B"
            },
            "tags_all": {
              "Name": "Private Subnet 1B"
            },
            "vpc_id": "vpc-04eed315a8046044b"
          },
          "dependencies": [
            "aws_vpc.VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:593052070155:subnet/subnet-0e5cee14bb8b22165",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.13.0/24",
            "id": "subnet-0e5cee14bb8b22165",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "593052070155",
            "tags": {
              "Name": "Private Subnet 1C"
            },
            "tags_all": {
              "Name": "Private Subnet 1C"
            },
            "vpc_id": "vpc-04eed315a8046044b"
          },
          "dependencies": [
            "aws_vpc.VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:593052070155:subnet/subnet-0ddda80d7f5d2b7bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0ddda80d7f5d2b7bd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "593052070155",
            "tags": {
              "Name": "Public Subnet 1A"
            },
            "tags_all": {
              "Name": "Public Subnet 1A"
            },
            "vpc_id": "vpc-04eed315a8046044b"
          },
          "dependencies": [
            "aws_vpc.VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:593052070155:subnet/subnet-0be67c0b3a3959010",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0be67c0b3a3959010",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "593052070155",
            "tags": {
              "Name": "Public Subnet 1B"
            },
            "tags_all": {
              "Name": "Public Subnet 1B"
            },
            "vpc_id": "vpc-04eed315a8046044b"
          },
          "dependencies": [
            "aws_vpc.VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:593052070155:subnet/subnet-01f3fa4f9f6ea6c96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-01f3fa4f9f6ea6c96",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "593052070155",
            "tags": {
              "Name": "Public Subnet 1C"
            },
            "tags_all": {
              "Name": "Public Subnet 1C"
            },
            "vpc_id": "vpc-04eed315a8046044b"
          },
          "dependencies": [
            "aws_vpc.VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:593052070155:vpc/vpc-04eed315a8046044b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07876a66f80f83fc0",
            "default_route_table_id": "rtb-033da08c9468dbdb8",
            "default_security_group_id": "sg-01cb71319a4c92076",
            "dhcp_options_id": "dopt-4ab44f2f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04eed315a8046044b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-033da08c9468dbdb8",
            "owner_id": "593052070155",
            "tags": {
              "Name": "patch-vpc"
            },
            "tags_all": {
              "Name": "patch-vpc"
            }
          }
        }
      ]
    }
  ]
}